--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "esp32_sd.c" "esp32_general.c" "main.c"
+idf_component_register(SRCS "esp32_wifi.c" "esp32_sd.c" "esp32_general.c" "main.c"
                     INCLUDE_DIRS "."
                     )
